--- a/resume.html
+++ b/resume.html
@@ -478,6 +478,7 @@ table th {
     <div class="myDetails" id="personal">
         <h3>Personal Details</h3>
         <p> 
+        <font color="#cc5200">Email Id: </font>soumi1694@gmail.com<br>
         <font color="#cc5200">Date of Birth: </font>1st June, 1994<br>
         <font color="#cc5200">Gender: </font> Female<br>
         <font color="#cc5200">Address: </font>Moni Pearl1724, Madurdaha, Kalikapur, Kolkata 700107<br>
